Started creating integration tests for the plugin. I thought I'd start at the beginning, so I added an 'init' task that can create both Grails applications and plugins. I then created the tests for it.